Add functionalityfor creating a grid with x by x elements

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>etch-a-sketch</title>
-        <script href="./javascript/javascript.js" defer></script>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
 
+        <div id="grid">
+
+        </div>
 
 
-        
-    
+        <script src="./javascript/javascript.js"></script>
     </body>
 </html>
