Add create-grid-button and color-change on mouse-over

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
     <body>
 
-        <div id="grid">
-
-        </div>
+        <button id="generateGrid">Generate a new grid</button>
 
 
         <script src="./javascript/javascript.js"></script>
