Add rainbow-button and functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
 
         <button id="generateGrid">Generate a new grid</button>
+        <button id="standard">Standard color</button>
+        <button id="rainbow">Rainbow mode</button>
 
 
         <script src="./javascript/javascript.js"></script>
